prblem fixed in grid.css

--- a/styles/grid.css
+++ b/styles/grid.css
@@ -382,6 +382,7 @@
         flex-shrink: 0;
         flex-basis: 100%;
     }
+}
 
     @media only screen and (min-width: 1200px) {
         .col-xl-1 {
