--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,77 @@
-html{
+html {
     box-sizing: border-box;
 }
-*, *:after, *:before{
-    box-sizing: border-box;
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
-body{
-    font-family: 'Nunito Regular';
+
+body {
+    font-family: "Nunito Regular";
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+/* ================ Start Header =============== */
+
+
+header {
+    background: url("../images/headerBg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100vh;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 0;
+    align-items: center;
+}
+
+.logo-wrapper {
+
+}
+
+.logo-img {
+
+}
+
+.main-menu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.menu-item {
+    margin: 0 25px;
+}
+
+.menu-link {
+
+}
+
+.login-btn {
+    background-color: #fff;
+    color: #93A5FF;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-family: 'Nunito Bold';
+}
+.login-btn span{
+    margin-left: 10px;
+}
+
+
+.menu-icon{
+    font-size: 28px;
+    cursor: pointer;
+    display: none;
 }
