--- a/styles/main.css
+++ b/styles/main.css
@@ -75,3 +75,39 @@ header {
     cursor: pointer;
     display: none;
 }
+.header-content{
+    margin-top: 4rem;
+}
+.domain{
+    align-items: center;
+}
+.header-title{
+    font-family: Roboto;
+    font-size: 2.5rem
+}
+.header-caption{
+    font-size: 1.1rem;
+    opacity: 0.8;
+}
+.header-txt{
+    background-color: #384170;
+    color: #fff;
+    padding: 0.9rem 1rem;
+    border-radius: 0.3rem 0 0 0.3rem;
+    max-width: 280px;
+    width: 100%;
+}
+.header-txt::placeholder{
+    color: #fff;
+    opacity: 0.8;
+}
+.header-domains{
+    background-color: #384170;
+    color: #fff;
+    padding: 12px 20px 11px 10px;
+    border-radius: 0 0.3rem 0.3rem 0;
+}
+
+.header-btn{
+    margin-left: 2rem;
+}
