--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -19,4 +19,37 @@
         display: block;
         text-align: center;
     }
+    .header-btn{
+        margin-left: 0;
+        margin-top: 15px;
+        width: 100%;
+    }
+    .header-txt{
+        max-width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .header-img{
+        order: 0 !important;
+    }
+    .header-wrapper{
+        order: 1;
+    }
+    .header-title{
+        margin-top: 0;
+    }
+    .header-content{
+        margin-top: 0;
+    }
+   
+}
+
+@media only screen and (max-width: 576px){
+    .header-title{
+        font-size: 2.1rem;
+    }
+    .header-caption{
+        font-size: 1rem;
+    }
 }
