--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -27,6 +27,15 @@
     .header-txt{
         max-width: 100%;
     }
+    .service-col-1{
+        order:1;
+    }
+    .service-col-2{
+        order:0;
+    }
+    .services-img{
+        margin-bottom: 35px;
+    }
 }
 
 @media only screen and (max-width: 768px){
