--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -28,38 +28,33 @@
         max-width: 100%;
     }
     .service-col-1{
-        order:1;
+        order: 1;
     }
     .service-col-2{
-        order:0;
+        order: 0;
     }
     .services-img{
         margin-bottom: 35px;
     }
-}
 
-@media only screen and (max-width: 768px){
-    .header-img{
-        order: 0 !important;
+}
+@media only screen and (max-width: 768px) {
+    .img{
+        order: 0;
     }
-    .header-wrapper{
+    .content{
         order: 1;
     }
-    .header-title{
-        margin-top: 0;
+    .header-content {
+        margin-top: 0px;
     }
-    .header-content{
-        margin-top: 0;
-    }
-   
 }
-
-@media only screen and (max-width: 576px){
+@media only screen and (max-width: 576px) {
     .header-title{
-        font-size: 2.1rem;
+        font-size: 34px;
     }
     .header-caption{
-        font-size: 1rem;
+        font-size: 17px;
     }
     .start-img-fix{
         max-width: 150px;
