--- a/styles/custom.css
+++ b/styles/custom.css
@@ -82,8 +82,16 @@
     background-color: #93A5FF;
     border-radius: 5px;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
+.mt-80{
+    margin-top: 80px;
+}
+
+.flex-wrap{
+    flex-wrap: wrap;
+}
 
 @media only screen and (min-width: 576px) {
     .d-sm-none {
