--- a/styles/app.css
+++ b/styles/app.css
@@ -334,3 +334,51 @@ header {
     width: 153px;
     margin: 0 auto;
 }
+
+
+/* -------- comments Section ------------*/
+
+.comments{
+    background-color: #F7F8FF;
+    padding: 60px 0;
+    position: relative;
+}
+.comments-img{
+    position: absolute;
+}
+.comments-img1{
+    top:0;
+    right: 0;
+}
+.comments-img2{
+    bottom: 0;
+    left: 0;
+}
+
+.comment{
+}
+.comment-content{
+
+}
+.comment-rating{
+
+}
+
+.comment-rating i {
+    color: #FAD56B;
+    margin-right:3px;
+}
+
+.comment-body{
+    font-family: "Nunito italic";
+    color: #2E2E2E;
+    line-height: 28px;
+}
+.comment-person{
+    color: #2E2E2E;
+    font-family: "Nunito Bold";
+}
+.comment-img{
+    width: 85px;
+    margin-right: 15px;
+}
