--- a/styles/app.css
+++ b/styles/app.css
@@ -379,6 +379,20 @@ header {
     font-family: "Nunito Bold";
 }
 .comment-img{
-    width: 85px;
+    width: 85px !important;
     margin-right: 15px;
+}
+.owl-dots .owl-dot{
+    outline: none;
+}
+
+.owl-dots .owl-dot span{
+    background-color: #93A5FF !important;
+    opacity: 0.4;
+}
+
+.owl-dots .owl-dot.active span{
+    background-color: #93A5FF !important;
+    transform: scale(1.6);
+    opacity: 1;
 }
