--- a/styles/app.css
+++ b/styles/app.css
@@ -426,13 +426,13 @@ header {
 
 .owl-next{
     position: absolute;
-    right: -10px;
+    right: -5px;
     top: 0;
     bottom:0;
 }
 .owl-prev{
     position: absolute;
-    left: -10px;
+    left: -5px;
     top: 0;
     bottom:0;
 }
@@ -448,6 +448,10 @@ footer{
     background-repeat: no-repeat;
     color: #fff;
     padding: 140px 0 80px 0;
+    background-position: center top;
+}
+footer p{
+    line-height: 28px;
 }
 
 .footer-list{
@@ -468,25 +472,30 @@ footer{
 }
 
 .accepts{
-
+    flex-wrap: wrap;
+    align-items: center;
 }
 .accept{
     background-color: #2D355D;
     border-radius: 5px;
     margin-right: 5px;
+    margin-bottom: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 5px;
     width: 70px;
+    height: 35px;
+    object-fit: contain;
 }
 
 .accept img{
     width: 65%;
+    object-fit: scale-down;
 }
 
 .footer-bottom {
     margin-top: 35px;
+    align-items: flex-start;
 }
 .social{
     justify-content: flex-end;
@@ -498,4 +507,13 @@ footer{
 
 .footer-logo{
     margin-bottom: 15px;
+}
+.br-1::after{
+    content: "";
+    border-right: 1px solid #fff;
+    margin: 0 15px;
+}
+
+.terms, .privacy{
+    line-height: 28px;
 }
