animations for buttons and footer links

--- a/styles/app.css
+++ b/styles/app.css
@@ -65,6 +65,11 @@ header {
     padding: 10px 15px;
     border-radius: 5px;
     font-family: 'Nunito Bold';
+    transition: 0.3s all;
+}
+.login-btn:hover{
+    color: #fff;
+    background-color: #93A5FF;
 }
 
 .login-btn span {
@@ -118,8 +123,11 @@ header {
 
 .header-btn {
     margin-left: 25px;
+    transition: 0.3s all;
 }
-
+.header-btn:hover{
+    background-color: #A0AEFF;
+}
 .flex-wrapper {
     flex-basis: 380px;
 }
@@ -222,10 +230,15 @@ header {
     color: #93A5FF;
     display: block;
     margin-left: auto;
+    width: 155px;
+    padding: 14px 0 14px 15px;
 }
-
+.start-btn:hover i{
+    margin-left: 15px;
+}
 .start-btn i{
     margin-left: 10px;
+    transition: all 0.3s;
 }
 .start-img-fix{
     position: absolute;
@@ -306,9 +319,21 @@ header {
     width: 185px;
     margin-top: 40px;
     margin-bottom: 25px;
+    padding: 14px 0 14px 15px;
+    text-align: left;
+    transition: all 0.3s;
 }
-.plan-btn i{
+
+.plan-btn:hover{
+    background-color: #93A5FF;
+    color: #F7F8FF;
+}
+.plan-btn:hover span{
+    margin-left: 10px;
+}
+.plan-btn span{
     margin-left: 5px;
+    transition: all 0.3s;
 }
 
 
@@ -333,6 +358,10 @@ header {
     display: block;
     width: 153px;
     margin: 0 auto;
+    transition: all 0.3s;
+}
+.btn-clients:hover{
+    background-color: #A0AEFF;
 }
 
 
@@ -447,7 +476,7 @@ footer{
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
-    padding: 140px 0 80px 0;
+    padding: 140px 0 40px 0;
     background-position: center top;
 }
 footer p{
@@ -494,7 +523,7 @@ footer p{
 }
 
 .footer-bottom {
-    margin-top: 35px;
+    margin-top: 60px;
     align-items: flex-start;
 }
 .social{
@@ -516,4 +545,8 @@ footer p{
 
 .terms, .privacy{
     line-height: 28px;
+}
+
+footer a:hover{
+    text-decoration: underline;
 }
