--- a/styles/grid.css
+++ b/styles/grid.css
@@ -5,6 +5,7 @@
     padding-right: 15px;
     padding-left: 15px;
     position: relative;
+    overflow-x: hidden;
 }
 
 @media only screen and (min-width: 576px) {
