navbar active item css added

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,4 +1,7 @@
 @media only screen and (max-width: 992px) {
+    nav{
+        padding-top: 25px;
+    }
     .menu-icon{
         display: block;
     }
@@ -14,6 +17,10 @@
     }
     .menu-item{
         margin: 25px 15px !important;
+        padding: 5px 0 !important
+    }
+    .menu-item.active{
+        background-color: transparent !important;
     }
     .login-btn{
         display: block;
