--- a/styles/app.css
+++ b/styles/app.css
@@ -31,8 +31,8 @@ header {
 .nav {
     display: flex;
     justify-content: space-between;
-    padding: 35px 0;
-    align-items: center;
+    padding-bottom: 35px;
+    align-items: baseline;
 }
 
 .logo-wrapper {
@@ -52,7 +52,14 @@ header {
 }
 
 .menu-item {
-    margin: 0 25px;
+    margin-right: 18px;
+    padding: 40px 18px 15px 18px;
+}
+.menu-item.active{
+    background-color: #93A5FF;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+
 }
 
 .menu-link {
