--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 2 versions
+*/
+
 @media only screen and (max-width: 992px) {
     nav{
         padding-top: 25px;
@@ -13,6 +20,7 @@
         left: -250px;
         background-color: #7381c3;
         width: 250px;
+        -webkit-transition: 0.3s;
         transition: 0.3s;
     }
     .menu-item{
@@ -35,10 +43,14 @@
         max-width: 100%;
     }
     .service-col-1{
-        order: 1;
+        -webkit-box-ordinal-group: 2;
+            -ms-flex-order: 1;
+                order: 1;
     }
     .service-col-2{
-        order: 0;
+        -webkit-box-ordinal-group: 1;
+            -ms-flex-order: 0;
+                order: 0;
     }
     .services-img{
         margin-bottom: 35px;
@@ -47,10 +59,14 @@
 }
 @media only screen and (max-width: 768px) {
     .img{
-        order: 0;
+        -webkit-box-ordinal-group: 1;
+            -ms-flex-order: 0;
+                order: 0;
     }
     .content{
-        order: 1;
+        -webkit-box-ordinal-group: 2;
+            -ms-flex-order: 1;
+                order: 1;
     }
     .header-content {
         margin-top: 0px;
@@ -85,12 +101,18 @@
         text-align: center;
     }
     .footer-bottom{
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     .social{
-        justify-content: center; 
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center; 
     }
     .accepts{
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 }
